refactor: LogService의 convertResponseToLogData() 메서드에서 구체적인 추상화 로직들 메서드로 모두 추출